--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,14 @@
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="apple-touch-icon" type="image/png" href="icon.png">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/index.js" defer></script>
+    <script src="js/majiang.js"></script>
+    <script>
+      var game;
+      $(function(){
+          game = new Majiang.Game();
+          game.kaiju();
+      });
+    </script>
   </head>
   <body>
     <div class="navi">
