add CSS class for UI buttons

--- a/www/index.html
+++ b/www/index.html
@@ -99,10 +99,10 @@
       </div>
       <div class="he he--zijia"></div>
       <div class="UI">
-        <span class="UI__button chi">チー</span>
-        <span class="UI__button peng">ポン</span>
-        <span class="UI__button gang">カン</span>
-        <span class="UI__button hu">フー</span>
+        <span class="UI__button UI__button--chi">チー</span>
+        <span class="UI__button UI__button--peng">ポン</span>
+        <span class="UI__button UI__button--gang">カン</span>
+        <span class="UI__button UI__button--hu">フー</span>
       </div>
     </div>
   </body>
