--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,11 @@
       <img class="pai" data-pai="z7" src="img/z7.gif">
       <img class="pai" data-pai="_" src="img/pai.gif">
       <br>
+      <audio data-name="dapai" src="audio/dapai.wav" volume="0.2" preload></audio>
+      <audio data-name="chi" src="audio/chi.wav" volume="0.2" preload></audio>
+      <audio data-name="peng" src="audio/peng.wav" volume="0.2" preload></audio>
+      <audio data-name="gang" src="audio/gang.wav" volume="0.2" preload></audio>
+      <audio data-name="hu" src="audio/hu.wav" volume="0.2" preload></audio>
     </div>
     <div class="game" id="game">
       <div class="chang">
